[gd_scene load_steps=8 format=3 uid="uid://3fiua2wuccff"]

[ext_resource type="Script" path="res://Scripts/Scene Scripts/TileInfoWindow.gd" id="1_g3ewq"]
[ext_resource type="PackedScene" uid="uid://cdn38de6vqq0" path="res://Scenes/Slide_Panel_Location.tscn" id="2_tlefm"]
[ext_resource type="Texture2D" uid="uid://blt4ytb3ultwd" path="res://Pix n Stuff/In Use/311.png" id="3_6yemy"]

[sub_resource type="Animation" id="Animation_bokwt"]
resource_name = "LocationInfoPanelSlideIn"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/LocationSlidingPanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(640, 0), Vector2(320, 0)]
}

[sub_resource type="Animation" id="Animation_wymx4"]
resource_name = "LocationInfoPanelSlideOut"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/LocationSlidingPanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(320, 0), Vector2(320, 0), Vector2(640, 0)]
}

[sub_resource type="Animation" id="Animation_nn11q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/LocationSlidingPanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(320, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1mhhr"]
_data = {
"LocationInfoPanelSlideIn": SubResource("Animation_bokwt"),
"LocationInfoPanelSlideOut": SubResource("Animation_wymx4"),
"RESET": SubResource("Animation_nn11q")
}

[node name="TileInfoWindow" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_g3ewq")
locationPanelSlide = ExtResource("2_tlefm")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(640, 480)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -240.0
offset_right = 320.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="PanelContainer"]
visibility_layer = 3
z_index = 5
layout_mode = 2

[node name="LocationSlidingPanel" type="Panel" parent="PanelContainer/Panel"]
show_behind_parent = true
z_as_relative = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -240.0
offset_bottom = 240.0
grow_horizontal = 0
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/Panel/LocationSlidingPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/Panel/LocationSlidingPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelForName" type="Panel" parent="PanelContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="NameLbl" type="Label" parent="PanelContainer/Panel/VBoxContainer/PanelForName"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Here Be Name"
horizontal_alignment = 1

[node name="exitBtn" type="Button" parent="PanelContainer/Panel/VBoxContainer/PanelForName"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -32.0
offset_bottom = 32.0
grow_horizontal = 0
icon = ExtResource("3_6yemy")
icon_alignment = 1
expand_icon = true

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="PanelContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel2" type="Panel" parent="PanelContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="PanelContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer/Panel2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TrabelBtn" type="Button" parent="PanelContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer/Panel2/VBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
text = "Travel Here"

[node name="TravelTimeLbl" type="Label" parent="PanelContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer/Panel2/VBoxContainer"]
layout_mode = 2
text = "Estimated time: X Days"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SlideButton" type="Button" parent="PanelContainer/Panel"]
modulate = Color(1, 0, 0, 1)
self_modulate = Color(1, 0, 0.0166664, 1)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -32.0
offset_bottom = 32.0
grow_horizontal = 0
grow_vertical = 2
text = ">
>
"

[node name="AnimationPlayer" type="AnimationPlayer" parent="PanelContainer"]
libraries = {
"": SubResource("AnimationLibrary_1mhhr")
}

[connection signal="pressed" from="PanelContainer/Panel/VBoxContainer/PanelForName/exitBtn" to="." method="_on_exit_screen_button_pressed"]
[connection signal="pressed" from="PanelContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer/Panel2/VBoxContainer/TrabelBtn" to="." method="_on_trabel_btn_pressed"]
[connection signal="animation_finished" from="PanelContainer/AnimationPlayer" to="." method="_on_animation_finished"]
